avoid scrollbar

--- a/src/app/child-dev-project/attendance/activity-card/activity-card.component.scss
+++ b/src/app/child-dev-project/attendance/activity-card/activity-card.component.scss
@@ -1,5 +1,5 @@
 .recurring-container {
-  background-color: lightyellow;
+  background-color: #fdfdb7;
 }
 .highlighted-container {
   border: solid 2px darkgray;
