--- a/src/app/child-dev-project/attendance/activity-setup/activity-setup.component.scss
+++ b/src/app/child-dev-project/attendance/activity-setup/activity-setup.component.scss
@@ -14,11 +14,11 @@
 }
 
 .confirm-button {
-  height: calc(100px - 2*16px);
+  height: calc(112px - 2*16px);
 }
 
 .selected-card {
-  max-height: calc(100px - 2*16px);
+  max-height: calc(112px - 2*16px);
   overflow: auto;
 }
 
